test/programs/good/check-terms-precedence/multiple_quantum_ctrls_stronger_than_dollar_1.lq
-- TODO: remove paranthesis in qubits
fun :: Bit
fun = a $ (with [ (q0), (q1) ] ctrl [ @1, @1 ])

